fix: adding gap in feature component

--- a/src/styles/components/sections/_app-features.scss
+++ b/src/styles/components/sections/_app-features.scss
@@ -23,7 +23,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      column-gap: 1rem;
+      gap: 1rem;
       img {
         max-height: 2rem;
       }
